fix invalid letter spacing values

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 30px;
-  letter-spacing: -7%;
+  letter-spacing: -2.1px;
   display: inline-block;
   transition: 0.2s;
 }
@@ -36,7 +36,7 @@ body {
   font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 30px;
-  letter-spacing: -7%;
+  letter-spacing: -2.1px;
   display: inline-block;
   margin-top: 0px;
 }
@@ -52,7 +52,7 @@ body {
   font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 70px;
-  letter-spacing: -9%;
+  letter-spacing: -6.3px;
   margin-top: 0px;
   margin-bottom: 0px;
   transition: 0.2s;
@@ -81,7 +81,7 @@ body {
   font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 30px;
-  letter-spacing: -7%;
+  letter-spacing: -2.1px;
   display: inline-block;
   margin-top: 0px;
 }
@@ -91,7 +91,7 @@ body {
   font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 30px;
-  letter-spacing: -7%;
+  letter-spacing: -2.1px;
   display: inline-block;
   margin-top: 0px;
 }
